--- a/templates/blog.html
+++ b/templates/blog.html
@@ -26,76 +26,35 @@
 
 <!--/ Section Blog-Single Star /-->
 <section class="blog-wrapper sect-pt4" id="blog">
+    {% for post in blog_list %}
     <div class="container">
         <div class="row">
             <div class="col-md-8">
                 <div class="post-box">
                     <div class="post-thumb">
-                        <img src="img/post-1.jpg" class="img-fluid" alt="">
+                        <img src="{{ post.thumbnail.url }}" class="img-fluid" alt="">
                     </div>
                     <div class="post-meta">
-                        <h1 class="article-title">Lorem ipsum dolor sit amet consec tetur adipisicing</h1>
+                        <h1 class="article-title">{{ post.title }}</h1>
                         <ul>
                             <li>
                                 <span class="ion-ios-person"></span>
-                                <a href="#">Jason London</a>
+                                <a href="#">{{ post.author.user.username }}</a>
                             </li>
                             <li>
-                                <span class="ion-pricetag"></span>
-                                <a href="#">Web Design</a>
+                                {% for cat in post.categories.all %}
+                                    <span class="ion-pricetag"></span>
+                                    <a href="#">{{ cat }}</a>
+                                {% endfor %}
                             </li>
                             <li>
                                 <span class="ion-chatbox"></span>
-                                <a href="#">14</a>
+                                <a href="#">{{ post.comment_count }}</a>
                             </li>
                         </ul>
                     </div>
                     <div class="article-content">
-                        <p>
-                            Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Cras ultricies ligula sed magna
-                            dictum
-                            porta. Quisque velit
-                            nisi, pretium ut lacinia in, elementum id enim. Praesent sapien massa, convallis a
-                            pellentesque
-                            nec, egestas non nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-                            posuere
-                            cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
-                            Nulla quis lorem ut libero malesuada feugiat.
-                        </p>
-                        <p>
-                            Nulla porttitor accumsan tincidunt. Cras ultricies ligula sed magna dictum porta. Mauris
-                            blandit
-                            aliquet elit, eget tincidunt
-                            nibh pulvinar a. Cras ultricies ligula sed magna dictum porta. Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Donec sollicitudin molestie malesuada.
-                        </p>
-                        <p>
-                            Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Lorem ipsum dolor sit amet,
-                            consectetur
-                            adipiscing elit. Praesent
-                            sapien massa, convallis a pellentesque nec, egestas non nisi. Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Curabitur arcu erat, accumsan id imperdiet et, porttitor at
-                            sem. Donec rutrum congue leo eget malesuada.
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lorem ut libero
-                            malesuada feugiat.
-                            Curabitur arcu erat,
-                            accumsan id imperdiet et, porttitor at sem. Vivamus suscipit tortor eget felis porttitor
-                            volutpat. Vivamus suscipit tortor eget felis porttitor volutpat. Quisque velit nisi, pretium
-                            ut lacinia in, elementum id enim.
-                        </p>
-                        <blockquote class="blockquote">
-                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere
-                                erat a ante.</p>
-                        </blockquote>
-                        <p>
-                            Nulla porttitor accumsan tincidunt. Cras ultricies ligula sed magna dictum porta. Mauris
-                            blandit
-                            aliquet elit, eget tincidunt
-                            nibh pulvinar a. Cras ultricies ligula sed magna dictum porta. Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Donec sollicitudin molestie malesuada.
-                        </p>
+                        <p>{{ post.overview }}</p>
                     </div>
                 </div>
                 <div class="box-comments">
@@ -217,13 +176,12 @@
                     <div class="sidebar-content">
                         <form>
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Search for..."
-                                       aria-label="Search for...">
+                                <input type="text" class="form-control" placeholder="Search for..." aria-label="Search for...">
                                 <span class="input-group-btn">
-                    <button class="btn btn-secondary btn-search" type="button">
-                      <span class="ion-android-search"></span>
-                    </button>
-                  </span>
+                                    <button class="btn btn-secondary btn-search" type="button">
+                                        <span class="ion-android-search"></span>
+                                    </button>
+                                </span>
                             </div>
                         </form>
                     </div>
