blog page working

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -27,7 +27,7 @@
 <!--/ Section Blog-Single Star /-->
 <section class="blog-wrapper sect-pt4" id="blog">
     {% for post in blog_list %}
-    <div class="container">
+        <div class="container">
         <div class="row">
             <div class="col-md-8">
                 <div class="post-box">
@@ -39,7 +39,7 @@
                         <ul>
                             <li>
                                 <span class="ion-ios-person"></span>
-                                <a href="#">{{ post.author.user.username }}</a>
+                                <a href="#">{{ post.author.user_name }}</a>
                             </li>
                             <li>
                                 {% for cat in post.categories.all %}
@@ -57,9 +57,10 @@
                         <p>{{ post.overview }}</p>
                     </div>
                 </div>
+
                 <div class="box-comments">
                     <div class="title-box-2">
-                        <h4 class="title-comments title-left">Comments (34)</h4>
+                        <h4 class="title-comments title-left">Comments ({{ post.comments.count }})</h4>
                     </div>
                     <ul class="list-comments">
                         <li>
@@ -170,94 +171,9 @@
                     </form>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="widget-sidebar sidebar-search">
-                    <h5 class="sidebar-title">Search</h5>
-                    <div class="sidebar-content">
-                        <form>
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Search for..." aria-label="Search for...">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-secondary btn-search" type="button">
-                                        <span class="ion-android-search"></span>
-                                    </button>
-                                </span>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="widget-sidebar">
-                    <h5 class="sidebar-title">Recent Post</h5>
-                    <div class="sidebar-content">
-                        <ul class="list-sidebar">
-                            <li>
-                                <a href="#">Atque placeat maiores.</a>
-                            </li>
-                            <li>
-                                <a href="#">Lorem ipsum dolor sit amet consectetur</a>
-                            </li>
-                            <li>
-                                <a href="#">Nam quo autem exercitationem.</a>
-                            </li>
-                            <li>
-                                <a href="#">Atque placeat maiores nam quo autem</a>
-                            </li>
-                            <li>
-                                <a href="#">Nam quo autem exercitationem.</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="widget-sidebar">
-                    <h5 class="sidebar-title">Archives</h5>
-                    <div class="sidebar-content">
-                        <ul class="list-sidebar">
-                            <li>
-                                <a href="#">September, 2017.</a>
-                            </li>
-                            <li>
-                                <a href="#">April, 2017.</a>
-                            </li>
-                            <li>
-                                <a href="#">Nam quo autem exercitationem.</a>
-                            </li>
-                            <li>
-                                <a href="#">Atque placeat maiores nam quo autem</a>
-                            </li>
-                            <li>
-                                <a href="#">Nam quo autem exercitationem.</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="widget-sidebar widget-tags">
-                    <h5 class="sidebar-title">Tags</h5>
-                    <div class="sidebar-content">
-                        <ul>
-                            <li>
-                                <a href="#">Web.</a>
-                            </li>
-                            <li>
-                                <a href="#">Design.</a>
-                            </li>
-                            <li>
-                                <a href="#">Travel.</a>
-                            </li>
-                            <li>
-                                <a href="#">Photoshop</a>
-                            </li>
-                            <li>
-                                <a href="#">Corel Draw</a>
-                            </li>
-                            <li>
-                                <a href="#">JavaScript</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
+    {% endfor %}
 </section>
 <!--/ Section Blog-Single End /-->
 
