--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -17,3 +17,7 @@
 
 <!-- Template Main Javascript File -->
 <script src="{% static 'js/main.js' %}"></script>
+
+<!-- This is for Tinymce -->
+<script src='{% static "js/highlight.pack.js" %}'></script>
+<script>hljs.initHighlightingOnLoad();</script>
