--- a/templates/blog.html
+++ b/templates/blog.html
@@ -26,154 +26,102 @@
 
 <!--/ Section Blog-Single Star /-->
 <section class="blog-wrapper sect-pt4" id="blog">
-    {% for post in blog_list %}
+    {% comment %}{% for post in blog_list %}{% endcomment %}
         <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <div class="post-box">
-                    <div class="post-thumb">
-                        <img src="{{ post.thumbnail.url }}" class="img-fluid" alt="">
-                    </div>
-                    <div class="post-meta">
-                        <h1 class="article-title">{{ post.title }}</h1>
-                        <ul>
-                            <li>
-                                <span class="ion-ios-person"></span>
-                                <a href="#">{{ post.author.user_name }}</a>
-                            </li>
-                            <li>
-                                {% for cat in post.categories.all %}
-                                    <span class="ion-pricetag"></span>
-                                    <a href="#">{{ cat }}</a>
-                                {% endfor %}
-                            </li>
-                            <li>
-                                <span class="ion-chatbox"></span>
-                                <a href="#">{{ post.comment_count }}</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="article-content">
-                        <p>{{ post.overview }}</p>
-                    </div>
-                </div>
-
-                <div class="box-comments">
-                    <div class="title-box-2">
-                        <h4 class="title-comments title-left">Comments ({{ post.comments.count }})</h4>
-                    </div>
-                    <ul class="list-comments">
-                        <li>
-                            <div class="comment-avatar">
-                                <img src="img/testimonial-2.jpg" alt="">
-                            </div>
-                            <div class="comment-details">
-                                <h4 class="comment-author">Oliver Colmenares</h4>
-                                <span>18 Sep 2017</span>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores reprehenderit,
-                                    provident cumque
-                                    ipsam temporibus maiores
-                                    quae natus libero optio, at qui beatae ducimus placeat debitis voluptates amet
-                                    corporis.
-                                </p>
-                                <a href="3">Reply</a>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="comment-avatar">
-                                <img src="img/testimonial-4.jpg" alt="">
-                            </div>
-                            <div class="comment-details">
-                                <h4 class="comment-author">Carmen Vegas</h4>
-                                <span>18 Sep 2017</span>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores reprehenderit,
-                                    provident cumque
-                                    ipsam temporibus maiores
-                                    quae natus libero optio, at qui beatae ducimus placeat debitis voluptates amet
-                                    corporis,
-                                    veritatis deserunt.
-                                </p>
-                                <a href="3">Reply</a>
-                            </div>
-                        </li>
-                        <li class="comment-children">
-                            <div class="comment-avatar">
-                                <img src="img/testimonial-2.jpg" alt="">
-                            </div>
-                            <div class="comment-details">
-                                <h4 class="comment-author">Oliver Colmenares</h4>
-                                <span>18 Sep 2017</span>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores reprehenderit,
-                                    provident cumque
-                                    ipsam temporibus maiores
-                                    quae.
-                                </p>
-                                <a href="3">Reply</a>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="comment-avatar">
-                                <img src="img/testimonial-2.jpg" alt="">
-                            </div>
-                            <div class="comment-details">
-                                <h4 class="comment-author">Oliver Colmenares</h4>
-                                <span>18 Sep 2017</span>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores reprehenderit,
-                                    provident cumque
-                                    ipsam temporibus maiores
-                                    quae natus libero optio.
-                                </p>
-                                <a href="3">Reply</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="form-comments">
-                    <div class="title-box-2">
-                        <h3 class="title-left">
-                            Leave a Reply
-                        </h3>
-                    </div>
-                    <form class="form-mf">
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <div class="form-group">
-                                    <input type="text" class="form-control input-mf" id="inputName" placeholder="Name *"
-                                           required>
-                                </div>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <div class="form-group">
-                                    <input type="email" class="form-control input-mf" id="inputEmail1"
-                                           placeholder="Email *" required>
-                                </div>
-                            </div>
-                            <div class="col-md-12 mb-3">
-                                <div class="form-group">
-                                    <input type="url" class="form-control input-mf" id="inputUrl" placeholder="Website">
-                                </div>
-                            </div>
-                            <div class="col-md-12 mb-3">
-                                <div class="form-group">
-                    <textarea id="textMessage" class="form-control input-mf" placeholder="Comment *" name="message"
-                              cols="45" rows="8" required></textarea>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <button type="submit" class="button button-a button-big button-rouded">Send Message
-                                </button>
-                            </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="post-box">
+                        <div class="post-thumb">
+                            <img src="{{ post.thumbnail.url }}" class="img-fluid" alt="">
                         </div>
-                    </form>
+                        <div class="post-meta">
+                            <h1 class="article-title">{{ post.title }}</h1>
+                            <ul>
+                                <li>
+                                    <span class="ion-ios-person"></span>
+                                    <a href="#">{{ post.author.user_name }}</a>
+                                </li>
+                                <li>
+                                    {% for cat in post.categories.all %}
+                                        <span class="ion-pricetag"></span>
+                                        <a href="#">{{ cat }}</a>
+                                    {% endfor %}
+                                </li>
+                                <li>
+                                    <span class="ion-chatbox"></span>
+                                    <a href="#">{{ post.comments.count }}</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="article-content">
+                            <p>{{ post.content | safe }}</p>
+                        </div>
+                    </div>
+                    <div class="box-comments">
+                        <div class="title-box-2">
+                            <h4 class="title-comments title-left">Comments ({{ post.comments.count }})</h4>
+                        </div>
+                        {% for comment in post.get_comments %}
+                            <ul class="list-comments">
+                                <li>
+                                    <div class="comment-avatar">
+                                        {% if comment.user.author %}
+                                            <img src="{{ comment.user.author.profile_picture.url }}" alt="">
+                                        {% else %}
+                                            <img src="{{ post.author.profile_picture.url }}" alt="">
+                                        {% endif %}
+                                    </div>
+                                    <div class="comment-details">
+                                        <h4 class="comment-author">{{ author.user.username }}</h4>
+                                        <span>{{ comment.timestamp|timesince }}</span>
+                                        <p>{{comment.content}}</p>
+                                        <a href="3">Reply</a>
+                                    </div>
+                                </li>
+                            </ul>
+                        {% endfor %}
+                    </div>
+                    {% if request.user.is_authenticated %}
+                        <div class="form-comments">
+                            <div class="title-box-2">
+                                <h3 class="title-left">Leave a Reply</h3>
+                            </div>
+                            <form class="form-mf" action="." method="POST">
+                                {% csrf_token %}
+                                <div class="row">
+                                    <div class="col-md-6 mb-3">
+                                        <div class="form-group">
+<!--                                            <input type="text" class="form-control input-mf" id="inputName" placeholder="Name *" required>-->
+                                            {{ form }}
+                                        </div>
+                                    </div>
+<!--                                    <div class="col-md-6 mb-3">-->
+<!--                                        <div class="form-group">-->
+<!--                                            <input type="email" class="form-control input-mf" id="inputEmail1" placeholder="Email *" required>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                    <div class="col-md-12 mb-3">-->
+<!--                                        <div class="form-group">-->
+<!--                                            <input type="url" class="form-control input-mf" id="inputUrl" placeholder="Website">-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                    <div class="col-md-12 mb-3">-->
+<!--                                        <div class="form-group">-->
+<!--                                            <textarea id="textMessage" class="form-control input-mf" placeholder="Comment *" name="message" cols="45" rows="8" required></textarea>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+                                    <div class="col-md-12">
+                                        <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    {% endif %}
                 </div>
+                {% include 'sidebar.html' %}
             </div>
         </div>
-    </div>
-    {% endfor %}
+    {% comment %}{% endfor %}{% endcomment %}
 </section>
 <!--/ Section Blog-Single End /-->
 
