sidebar now working

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -118,7 +118,7 @@
                         </div>
                     {% endif %}
                 </div>
-                {% include 'sidebar.html' %}
+                {% include 'sidebar.html' with most_recent=most_recent %}
             </div>
         </div>
     {% comment %}{% endfor %}{% endcomment %}
