--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,9 +1,15 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-    <h2>This is your search result</h2>
-    {% for post in queryset %}
-        <a href="post.get_absolute_url">{{ post.title }}</a>
-        <br/>
-    {% endfor %}
+    <div class="container mt-5">
+        <h2>This is your search result</h2>
+
+        {% for post in queryset %}
+            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+            <br/>
+        {% endfor %}
+
+    </div>
+
 {% endblock %}
