--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,11 +3,11 @@
     <div class="widget-sidebar sidebar-search">
         <h5 class="sidebar-title">Search</h5>
         <div class="sidebar-content">
-            <form>
+            <form action="{%url 'search' %}" class="search-form">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for..." aria-label="Search for...">
+                    <input type="text" name="q" class="form-control" placeholder="Search for..." aria-label="Search for...">
                     <span class="input-group-btn">
-                        <button class="btn btn-secondary btn-search" type="button">
+                        <button class="btn btn-secondary btn-search" type="submit">
                             <span class="ion-android-search"></span>
                         </button>
                     </span>
@@ -19,69 +19,47 @@
         <h5 class="sidebar-title">Recent Post</h5>
         <div class="sidebar-content">
             <ul class="list-sidebar">
-                <li>
-                    <a href="#">Atque placeat maiores.</a>
-                </li>
-                <li>
-                    <a href="#">Lorem ipsum dolor sit amet consectetur</a>
-                </li>
-                <li>
-                    <a href="#">Nam quo autem exercitationem.</a>
-                </li>
-                <li>
-                    <a href="#">Atque placeat maiores nam quo autem</a>
-                </li>
-                <li>
-                    <a href="#">Nam quo autem exercitationem.</a>
-                </li>
+                {% for post in most_recent %}
+                    <li>
+                        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+                    </li>
+                {% endfor %}
             </ul>
         </div>
     </div>
-    <div class="widget-sidebar">
-        <h5 class="sidebar-title">Archives</h5>
-        <div class="sidebar-content">
-            <ul class="list-sidebar">
-                <li>
-                    <a href="#">September, 2017.</a>
-                </li>
-                <li>
-                    <a href="#">April, 2017.</a>
-                </li>
-                <li>
-                    <a href="#">Nam quo autem exercitationem.</a>
-                </li>
-                <li>
-                    <a href="#">Atque placeat maiores nam quo autem</a>
-                </li>
-                <li>
-                    <a href="#">Nam quo autem exercitationem.</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+<!--  Will find a way to display Archives effectively  -->
+<!--    <div class="widget-sidebar">-->
+<!--        <h5 class="sidebar-title">Archives</h5>-->
+<!--        <div class="sidebar-content">-->
+<!--            <ul class="list-sidebar">-->
+<!--                <li>-->
+<!--                    <a href="#">September, 2017.</a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="#">April, 2017.</a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="#">Nam quo autem exercitationem.</a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="#">Atque placeat maiores nam quo autem</a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="#">Nam quo autem exercitationem.</a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--    </div>-->
     <div class="widget-sidebar widget-tags">
         <h5 class="sidebar-title">Tags</h5>
         <div class="sidebar-content">
-            <ul>
-                <li>
-                    <a href="#">Web.</a>
-                </li>
-                <li>
-                    <a href="#">Design.</a>
-                </li>
-                <li>
-                    <a href="#">Travel.</a>
-                </li>
-                <li>
-                    <a href="#">Photoshop</a>
-                </li>
-                <li>
-                    <a href="#">Corel Draw</a>
-                </li>
-                <li>
-                    <a href="#">JavaScript</a>
-                </li>
-            </ul>
+            {% for cat in category_list.all %}
+                <ul>
+                    <li>
+                        <a href="{{ cat.get_absolute_url }}">{{ cat }}</a>
+                    </li>
+                </ul>
+            {% endfor %}
         </div>
     </div>
 </div>
