--- a/templates/head.html
+++ b/templates/head.html
@@ -21,6 +21,9 @@
     <link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
     <link href="{% static 'lib/lightbox/css/lightbox.min.css' %}" rel="stylesheet">
 
+<!--  Added to try and remove the tags that are being rendered  -->
+    <link href='{% static "styles/github.css" %}' rel="stylesheet">
+
     <!-- Main Stylesheet File -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
