--- a/templates/blog.html
+++ b/templates/blog.html
@@ -125,12 +125,14 @@
                                 </div>
                             </form>
                         </div>
+                    {% else %}
+                        <a href="{% url 'account_login' %}" class="btn btn-primary">Login to Comment</a>
                     {% endif %}
                 </div>
                 {% include 'sidebar.html' with most_recent=most_recent %}
             </div>
         </div>
-    {% comment %}{% endfor %}{% endcomment %}
+<!--    {% comment %}{% endfor %}{% endcomment %}-->
 </section>
 <!--/ Section Blog-Single End /-->
 
